--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -2,19 +2,16 @@
 
 {% block title %}Hello ConferenceController!{% endblock %}
 
+{% block stylesheets %} {{ parent() }} {% endblock %}
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/fabien/Code/github/symfonycorp/book.symfony.com/guestbook-generated/src/Controller/ConferenceController.php'|file_link(0) }}">src/Controller/ConferenceController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/fabien/Code/github/symfonycorp/book.symfony.com/guestbook-generated/templates/conference/index.html.twig'|file_link(0) }}">templates/conference/index.html.twig</a></code></li>
-    </ul>
+<div class="main-wrapper">
+  <h1>Hello Awesome user! ✅</h1>
+
+  <h3>Get ready for the certification in no time, yeaaa baby!</h3>
+
+  <h4><a href="{{ path('categories') }}">Let's start this shit!!! </a></h4>
 </div>
 {% endblock %}
