--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,11 +5,6 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
-
-            <style>
-                .main-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-                .main-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-            </style>
         {% endblock %}
 
         {% block javascripts %}
@@ -17,12 +12,12 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="main-nav">
-            <ol>
-                <li class="nav-item"><a href="#">Home {# TODO: Icon here - Left #}</a></li>
-                <li class="nav-item"><a href="#">Categories</a></li>
-                <li class="nav-item">My profile</li>
-            </ol>
+        <nav class="main-nav primary-navigation">
+            <ul>
+                <li class="nav-item"><a href="{{ path('home') }}">Home {# TODO: Icon here - Left #}</a></li>
+                <li class="nav-item"><a href="{{ path('categories') }}">Categories</a></li>
+                <li class="nav-item"><a href="#">My profile</a></li>
+            </ul>
         </nav>
         {% block body %}{% endblock %}
 
